--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 /*Navigation*/
 .navbar {
   background: white;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.7);
+  /* box-shadow: 0 2px 3px rgba(0, 0, 0, 0.7); */
 }
 
 ul.navbar-nav {
